# sinas

./: .env.example  .gitignore  CLA.md  CLAUDE.md  Caddyfile  DOCS.md  Dockerfile  FEATURES.md  INSTALL.md  ISSUES.md  MONOREPO.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-clickhouse.sql  install.sh  pyproject.toml
.github/workflows/: build-images.yml  scaleway.yml
alembic/: env.py
alembic/versions/: 06138fc1ccc4_add_awaiting_input_to_execution_status.py  45e93fcdff09_add_email_tables.py  4600f2668ffc_add_ontology_access_to_assistant.py  4887dfb7d6ac_initial_schema.py  4ae78c37abf2_add_stateful_execution_fields.py  79f12302fe50_add_context_stores_table.py  7bd8d22de41f_initial_migration_with_subtenancy.py  8c004ed4e7d7_remove_separate_subtenant_id_column.py  (+4 more)
app/: main.py
app/api/: executions.py  (+9 more)
backend/: container_executor.py  init-postgres.sh  pyproject.toml  refactor_groups_to_roles.sh
config_examples/: default-data.yaml
console/: Dockerfile  Dockerfile.dockerignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: admin.md  authentication.md  build.md  concepts.md  configure.md  deployment.md  environment-variables.md  introduction.md  role-based-access-control-rbac.md  runtime-api-vs-management-api.md  storage.md  triggers.md
docs-mint/: docs.json  index.mdx
scripts/: example_functions.py  setup_db.py
tests/: README.md  debug_webhooks.py  test_basic_functionality.py  test_full_integration.py  test_interactive_with_otp.py  test_simple_otp.py
(+418 files in other folders)
